--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 PROJECT(alog)
 
+option(ALOG_ENABLE_TESTS     "Enable tests for ALog" OFF)
+option(ALOG_ENABLE_BENCHMARK "Enable benchmark for ALog" OFF)
+
 FILE(GLOB_RECURSE SOURCES src/*.cpp src/*.h headers/*.h)
 
 add_library(alog STATIC ${SOURCES})
@@ -12,3 +15,5 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 elseif(UNIX)
     target_compile_definitions(alog PUBLIC ALOG_LINUX)
 endif()
+
+add_subdirectory(tests)
