--- a/tests/test/CMakeLists.txt
+++ b/tests/test/CMakeLists.txt
@@ -8,3 +8,7 @@ set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY CXX_STANDARD 17)
 target_link_libraries(${PROJECT_TEST_NAME} gtest gmock_main ${PROJECT_NAME})
 
 add_test(NAME ${PROJECT_TEST_NAME}-runner COMMAND ${PROJECT_TEST_NAME})
+
+if(ALOG_CI_SKIP_SORT_TEST)
+    target_compile_definitions(${PROJECT_TEST_NAME} PRIVATE ALOG_CI_SKIP_SORT_TEST)
+endif()
