Disable MSVC warnings about codevct and CRT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,15 @@ FILE(GLOB_RECURSE SOURCES src/*.cpp src/*.h headers/*.h)
 
 add_library(alog STATIC ${SOURCES})
 set_property(TARGET alog PROPERTY CXX_STANDARD 17)
+set_property(TARGET alog PROPERTY CXX_STANDARD_REQUIRED TRUE)
 target_include_directories(alog PUBLIC headers)
 
 if(MSVC)
     target_link_options(alog PRIVATE "/ignore:4221")
     set_target_properties(alog PROPERTIES STATIC_LIBRARY_OPTIONS "/ignore:4221")
+    target_compile_definitions(alog
+        PRIVATE _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING
+        PUBLIC _CRT_SECURE_NO_WARNINGS _CRT_NONSTDC_NO_WARNINGS)
 endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
