--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         build_type: [Release, Debug]
 
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
 
     steps:
     - name: "Set OS-specific values (Linux)"
@@ -56,4 +57,4 @@ jobs:
       run: |
        cmake -DALOG_CI_SKIP_SORT_TEST=1 -DALOG_ENABLE_TESTS=ON -DALOG_ENABLE_BENCHMARK=ON -DCMAKE_BUILD_TYPE="${{matrix.build_type}}" -G "${{env.GENERATOR}}" -S "${{github.workspace}}/src" -B "${{github.workspace}}/build"
        cmake --build "${{github.workspace}}/build" --config "${{matrix.build_type}}" -j "${{env.CORES}}"
-       ctest --rerun-failed --output-on-failure --timeout 20 -C "${{matrix.build_type}}" --test-dir "${{github.workspace}}/build/tests"
+       ctest --rerun-failed --output-on-failure --timeout 30 -C "${{matrix.build_type}}" --test-dir "${{github.workspace}}/build/tests"
