--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 PROJECT(alog)
 
-option(ALOG_ENABLE_TESTS     "Enable tests for ALog" OFF)
-option(ALOG_ENABLE_BENCHMARK "Enable benchmark for ALog" OFF)
+option(ALOG_ENABLE_TESTS             "ALog: Enable tests" OFF)
+option(ALOG_ENABLE_BENCHMARK         "ALog: Enable benchmark" OFF)
+option(ALOG_ENABLE_DEF_SEPARATORS    "ALog: Enable space-separators by default" ON)
+option(ALOG_ENABLE_DEF_AUTO_QUOTES   "ALog: Enable auto quotes" ON)
+option(ALOG_ENABLE_DEBUG             "ALog: Enable additional debug checks" OFF)
 
 FILE(GLOB_RECURSE SOURCES src/*.cpp src/*.h headers/*.h)
 
@@ -23,6 +26,18 @@ target_compile_options(alog PRIVATE
     $<$<CXX_COMPILER_ID:MSVC>:/WX>
     $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Werror>
 )
+
+if(ALOG_ENABLE_DEF_SEPARATORS)
+    target_compile_definitions(alog PUBLIC ALOG_ENABLE_DEF_SEPARATORS)
+endif()
+
+if(ALOG_ENABLE_DEF_AUTO_QUOTES)
+    target_compile_definitions(alog PUBLIC ALOG_ENABLE_DEF_AUTO_QUOTES)
+endif()
+
+if(ALOG_ENABLE_DEBUG)
+    target_compile_definitions(alog PUBLIC ALOG_ENABLE_DEBUG)
+endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     target_compile_definitions(alog PUBLIC ALOG_MACOSX)
