--- a/tests/test2/CMakeLists.txt
+++ b/tests/test2/CMakeLists.txt
@@ -5,7 +5,7 @@ project(test-alog-2 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(test-alog-2 main.cpp)
+add_executable(test-alog-2 test-alog-2-main.cpp)
 set_property(TARGET test-alog-2 PROPERTY CXX_STANDARD 17)
 target_link_libraries(test-alog-2 PRIVATE alog)
 
