--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
+        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2019, windows-2022]
         build_type: [Release, Debug]
         alog_enable_def_separators: [ON, OFF]
         alog_enable_def_auto_quotes: [ON, OFF]
@@ -49,6 +49,13 @@ jobs:
       shell: bash
       run: |
        echo "GENERATOR=Visual Studio 16 2019" >> $GITHUB_ENV
+       echo "CORES=$NUMBER_OF_PROCESSORS" >> $GITHUB_ENV
+
+    - name: "Set OS-specific values (Win; 2022)"
+      if: ${{ matrix.os == 'windows-2022' }}
+      shell: bash
+      run: |
+       echo "GENERATOR=Visual Studio 17 2022" >> $GITHUB_ENV
        echo "CORES=$NUMBER_OF_PROCESSORS" >> $GITHUB_ENV
 
     - uses: actions/checkout@v2
