--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2019, windows-2022]
+        os: [ubuntu-20.04, macos-11, windows-2019]
         build_type: [Release, Debug]
         alog_enable_def_separators: [ON, OFF]
         alog_enable_def_auto_quotes: [ON, OFF]
@@ -58,7 +58,7 @@ jobs:
        echo "GENERATOR=Visual Studio 17 2022" >> $GITHUB_ENV
        echo "CORES=$NUMBER_OF_PROCESSORS" >> $GITHUB_ENV
 
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         path: src
 
