--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         id: codechecker
         with:
           logfile: ${{ github.workspace }}/Build/compile_commands.json
-          config: ${{ github.workspace }}/.codechecker.json
+          config: ${{ github.workspace }}/.codechecker.yml
 
       # Upload the results to the CI.
       - uses: actions/upload-artifact@v2
