SA: Allow superfluous std::move

--- a/.codechecker.yml
+++ b/.codechecker.yml
@@ -2,5 +2,7 @@ analyzer:
   - --skip=.skipfile
   # Allow Rule of Three
   - --checker-config=clang-tidy:cppcoreguidelines-special-member-functions.AllowMissingMoveFunctions=true
+  # The move does not harm here
+  - --checker-config=clang-tidy:performance-move-const-arg.CheckTriviallyCopyableMove=false
 parse:
   - --skip=.skipfile
