--- a/tests/test/CMakeLists.txt
+++ b/tests/test/CMakeLists.txt
@@ -4,6 +4,10 @@ set(PROJECT_TEST_NAME test-${PROJECT_NAME})
 
 add_executable(${PROJECT_TEST_NAME} ${SOURCES})
 set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY CXX_STANDARD 17)
+if (ALOG_HAS_QT_LIBRARY)
+    set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY AUTOMOC ON)
+    set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY AUTORCC ON)
+endif()
 
 target_link_libraries(${PROJECT_TEST_NAME} gtest gmock_main ${PROJECT_NAME})
 
