CI: Don't build WIP branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - '**'
+      - '!wip**'
+      - '!**wip'
   pull_request:
     types: [opened, edited, synchronize]
 
