Fix OS detection defines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,10 +55,15 @@ if(ALOG_ENABLE_DEBUG)
     target_compile_definitions(alog PUBLIC ALOG_ENABLE_DEBUG)
 endif()
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    target_compile_definitions(alog PUBLIC ALOG_MACOSX)
+if (WIN32)
+    set(ALOG_WINDOWS TRUE)
+    target_compile_definitions(alog PUBLIC ALOG_WINDOWS=1)
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(ALOG_MACOSX TRUE)
+    target_compile_definitions(alog PUBLIC ALOG_MACOSX=1)
 elseif(UNIX)
-    target_compile_definitions(alog PUBLIC ALOG_LINUX)
+    set(ALOG_LINUX TRUE)
+    target_compile_definitions(alog PUBLIC ALOG_LINUX=1)
     target_link_libraries(alog PRIVATE pthread)
 endif()
 
