--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,13 +16,23 @@ if (ALOG_ENABLE_BENCHMARK)
     set(ALOG_NEED_BENCHMARK ON)
 endif()
 
+if (NOT ${ALOG_GTEST_SEARCH_MODE} STREQUAL "Skip")
+    if (${ALOG_GTEST_SEARCH_MODE} STREQUAL "Auto")
+        set(ALOG__INTERNAL_GTEST_SEARCH_MODE QUIET)
+    else()
+        set(ALOG__INTERNAL_GTEST_SEARCH_MODE REQUIRED)
+    endif()
+endif()
+
 if (ALOG_NEED_GTEST AND NOT TARGET gtest)
-    find_package(GTest QUIET)
+    if (NOT ${ALOG_GTEST_SEARCH_MODE} STREQUAL "Skip")
+        find_package(GTest ${ALOG__INTERNAL_GTEST_SEARCH_MODE})
+    endif()
 
     if (GTest_FOUND)
         message("GTest found!")
     else()
-        message("GTest NOT found! Going to download...")
+        message("GTest NOT found! Adding external source...")
 
         set(INSTALL_GTEST OFF CACHE BOOL "Do not install gtest" FORCE)
         set(INSTALL_GMOCK OFF CACHE BOOL "Do not install gmock" FORCE)
@@ -38,12 +48,14 @@ if (ALOG_NEED_GTEST AND NOT TARGET gtest)
 endif()
 
 if (ALOG_NEED_BENCHMARK AND NOT TARGET benchmark)
-    find_package(benchmark QUIET)
-    
+    if (NOT ${ALOG_GTEST_SEARCH_MODE} STREQUAL "Skip")
+        find_package(benchmark ${ALOG__INTERNAL_GTEST_SEARCH_MODE})
+    endif()
+
     if (benchmark_FOUND)
         message("Google benchmark found!")
     else()
-        message("Google benchmark NOT found! Going to download...")
+        message("Google benchmark NOT found! Adding external source...")
 
         set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
         set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
@@ -51,7 +63,7 @@ if (ALOG_NEED_BENCHMARK AND NOT TARGET benchmark)
 
         FetchContent_Declare(
             google-benchmark
-            URL https://github.com/google/benchmark/archive/refs/tags/v1.5.3.tar.gz
+            URL https://github.com/google/benchmark/archive/refs/tags/v1.8.3.tar.gz
         )
 
         FetchContent_MakeAvailable(google-benchmark)
