--- a/tests/test/CMakeLists.txt
+++ b/tests/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-FILE(GLOB_RECURSE SOURCES *.cpp)
+FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS *.cpp)
 
 set(PROJECT_TEST_NAME test-${PROJECT_NAME})
 
